Set min Java version to 11